--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .App {
   text-align: center;
@@ -153,11 +154,28 @@
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 1rem;
   margin: 1rem;
-  height: 45vh;
+  height: 68vh;
   
 }
 
 .img-box img{
   background-size: cover;
   transform: scale(.7);
+}
+
+.form-box button{
+ width: 75% !important;
+}
+.form-box h4{
+  font-weight: 700;
+  color: #3b71ca;
+}
+.form-box p{
+  margin-top: 1rem;
+}
+
+.form-box p span{
+  text-decoration: underline;
+  cursor: pointer;
+ color: #3b71ca;
 }
