--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -163,19 +163,43 @@
   transform: scale(.7);
 }
 
-.form-box button{
+.form-box button,.loginform-box button{
  width: 75% !important;
 }
-.form-box h4{
+.form-box h4,.loginform-box h4{
   font-weight: 700;
   color: #3b71ca;
+  margin-bottom: 1rem;
 }
-.form-box p{
+.form-box p ,.loginform-box p{
   margin-top: 1rem;
 }
 
-.form-box p span{
+.form-box p span,.loginform-box p span{
   text-decoration: underline;
   cursor: pointer;
  color: #3b71ca;
+}
+.login-box{
+  margin-top: 5rem;
+  margin-bottom: 9rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.loginform-box{
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  padding: 1rem;
+  margin: 1rem;
+  height: 50vh;
+  
+}
+
+.titl{
+  color:  #3b71ca !important;
+  font-weight: 600;
+  font-size: 1.6rem !important;
+}
+
+.navupd{
+  padding-left: 66vw !important;
 }
