--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,12 @@ body {
   overflow-y: scroll; 
 }
 
+
 body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
+.container::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
 
@@ -209,7 +214,7 @@ body::-webkit-scrollbar {
 .foot-c{
  
   width: 100%;
-position: absolute;
+
 bottom: 0%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
