--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,14 @@
-.lds-spinner {
-  color: official;
-  display: inline-block;
+.lds-box {
+  display: flex;
   position: absolute;
-  width: 80px;
-  height: 80px;
-  top: 50vh;
-  width: 50vw;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+ 
+  height: 100%;
+  /* top: 50%; */
+  /* left: 50%; */
+  width: 100%;
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
