View Code component added and bugs fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -339,6 +339,9 @@ text-align: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.txt1{
-
+.view_code_card{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
