--- a/frontend/src/Pages/codeVault/CodeVault.css
+++ b/frontend/src/Pages/codeVault/CodeVault.css
@@ -80,7 +80,19 @@
 .code_three_dot {
   position: absolute;
   top: 32px;
-  z-index: 100;
   cursor: pointer;
   right: 3px;
+}
+
+.action_dropdown{
+  position: absolute;
+  right: 24px;
+  background: white;
+  top: 8px;
+  border-radius: 7px;
+  padding: 0px 12px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.dropDown_edit_icon ,.dropDown_delete_icon{
+cursor: pointer;
 }
