--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -266,7 +266,7 @@ bottom: 0%;
   justify-content: center;
   flex-wrap: wrap;
   gap: 36px;
-
+  margin-bottom: 1rem;
 }
 
 .service-wrapper{
@@ -332,11 +332,12 @@ text-align: center;
   overflow: scroll;
 }
 .containerd{
-  height: 53vh;
+  height: 64vh;
   width: 43vw;
   margin-top: 2rem !important;
   margin-bottom: 3rem !important;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 2rem;
 }
 
 .view_code_card{
