--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .App {
   text-align: center;
 }
@@ -7,9 +7,8 @@
 body {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll; 
+  overflow-y: scroll;
 }
-
 
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
@@ -19,23 +18,23 @@ body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
 
-.fl-c{
+.fl-c {
   overflow: hidden;
   display: flex;
- 
+
   flex-direction: column;
 }
 
-.fl-r{
+.fl-r {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.navbar{
+.navbar {
   width: 100vw;
 }
-.about-box{
+.about-box {
   font-family: sans-serif;
   margin: 3rem;
   font-size: 1.2rem;
@@ -44,58 +43,57 @@ body::-webkit-scrollbar {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-
-.register{
+.register {
   max-width: 978px;
   width: 100vw;
-  display:flex;
+  display: flex;
   border: 1px solid #e9ecef;
   border-radius: 5px;
-  /* box-shadow: 1px 3px 10px #e9ecef; */
   background-color: white;
 }
 
-.register span{
+.register span {
   color: #adb5bd;
 }
 
-#form{
+#form {
   max-width: 320px;
   width: 100vw;
   margin: 2em auto;
 }
 
-#form >  input, .btn{
+#form > input,
+.btn {
   border: 1px solid #e9ecef;
-  padding: .9em 1em;
+  padding: 0.9em 1em;
 }
 
-#form > input:focus{
+#form > input:focus {
   outline: none;
 }
 
-#form > .btn1{
+#form > .btn1 {
   background-color: #003049;
   color: #e9ecef;
   font-size: 1em;
   cursor: pointer;
 }
 
-.flex{
+.flex {
   display: flex;
   gap: 1em;
 }
 
-.flex-col{
+.flex-col {
   flex-direction: column;
 }
 
-.register .col-1{
+.register .col-1 {
   margin: auto;
   padding: 3em 0;
 }
 
-.register .col-2 img{
+.register .col-2 img {
   width: 480px;
   height: 100%;
   object-fit: cover;
@@ -105,162 +103,164 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-@media screen and (max-width: 860px)  {
-  .register .col-2 img{
+@media screen and (max-width: 860px) {
+  .register .col-2 img {
     display: initial;
   }
-  .img-box{
-    display:none;
+  .img-box {
+    display: none;
   }
-  .vault-modal{
+  .vault-modal {
     flex-wrap: wrap;
   }
 }
 
-@media (min-width:860px) {
-  .form-box{
+@media (min-width: 860px) {
+  .form-box {
     width: 46vh;
   }
 }
 
-.signup-box{
-  margin-top: 5rem;
-  margin-bottom: 9rem;
- 
-}
-
-.form-box{
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-  padding: 1rem;
-  margin: 1rem;
-  height: 68vh;
-  
-}
-
 .img-box {
-  height: 39vw;
-  width: 39vw;
+  height: 12rem;
+  width: 13rem;
+  position: relative;
+  border-radius: 20rem;
+  z-index: 1;
+  margin-bottom: -6rem;
+  right: 36%;
 }
 
-.form-box button,.loginform-box button{
- width: 75% !important;
+.signUpForm-box button,
+.loginform-box button {
+  width: 55% !important;
 }
-.form-box h4,.loginform-box h4{
+.signUpForm-box h4,
+.loginform-box h4 {
   font-weight: 700;
   color: #3b71ca;
   margin-bottom: 1rem;
 }
-.form-box p ,.loginform-box p{
+.signUpForm-box p,
+.loginform-box p {
   margin-top: 1rem;
 }
 
-.form-box p span,.loginform-box p span{
+.signUpForm-box p span,
+.loginform-box p span {
   text-decoration: underline;
   cursor: pointer;
- color: #3b71ca;
+  color: #3b71ca;
 }
-.login-box{
-  margin-top: 5rem;
-  margin-bottom: 9rem;
-  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+.login-box,.signup-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.loginform-box{
- box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-  padding: 1rem;
+.auth-input{
+  width: 15rem;
+  font-size: 15px;
+}
+
+.loginform-box,
+.signUpForm-box {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  padding: 2rem;
   margin: 1rem;
-  
+  align-items: center;
+  z-index: 10;
 }
-.opac{
-  opacity: .2;
+.opac {
+  opacity: 0.2;
 }
 
-.titl{
+.titl {
   color: #3b71ca !important;
   font-weight: 800;
   font-size: 2rem !important;
   margin-left: 30px;
 }
 
-.navupd{
-  /* padding-left: 46vw !important; */
+.navupd {
   font-size: 1.1rem;
   font-weight: 500;
 }
 
-.navbar-collapse{
-  max-width: fit-content ;
+.navbar-collapse {
+  max-width: fit-content;
 }
-.me-auto{
+.me-auto {
   margin-right: 14px !important;
 }
-.navtag{
-  background-image:aliceblue !important ;
+.navtag {
+  background-image: aliceblue !important ;
 }
 
-@media (max-width:1000px) {
-  .navupd{
+@media (max-width: 1000px) {
+  .navupd {
     padding-left: 0vw !important;
   }
-  .button-box{
+  .button-box {
     flex-direction: column;
   }
-  /* .add-box,.view-box{
-    margin: 0px;
-  } */
-  .containerd{
+  
+  .containerd {
     width: 90vw !important;
-    
   }
-  .button-box{
+  .button-box {
     margin-top: 1rem;
   }
-  .foot-c{
+  .foot-c {
     position: static !important ;
   }
 }
 
-@media (min-width:550px) {
-  .logout-btn{
+@media (min-width: 550px) {
+  .logout-btn {
     margin-right: 10px;
   }
-  .services-card .chakra-card{
+  .services-card .chakra-card {
     min-width: 25rem;
     max-width: 25rem;
-    }
+  }
+  .auth-input{
+    width: 16rem !important;
+    font-size: 15px !important;
+  }
 }
-.foot-c{
- 
+.foot-c {
   width: 100%;
 
-bottom: 0%;
+  bottom: 0%;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.box-wrapper{
+.box-wrapper {
   text-align: center;
 }
 
-.button-box{
+.button-box {
   margin-top: auto;
   text-align: center;
 }
 
-.box-wrapper h6{
+.box-wrapper h6 {
   margin: 1rem;
-  color:  #3b71ca !important;
+  color: #3b71ca !important;
   font-weight: 600;
   font-size: 1.6rem !important;
 }
-.services-card .chakra-card{
+.services-card .chakra-card {
   align-items: start !important;
-  padding: .5rem;
+  padding: 0.5rem;
   cursor: pointer;
 }
-.services-card .chakra-card:hover{
+.services-card .chakra-card:hover {
   scale: 1.02;
 }
-.services-card{
+.services-card {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -269,29 +269,29 @@ bottom: 0%;
   margin-bottom: 1rem;
 }
 
-.service-wrapper{
-margin: 2rem .5rem 2rem .5rem;
-gap: 15px;
-text-align: center;
+.service-wrapper {
+  margin: 2rem 0.5rem 2rem 0.5rem;
+  gap: 15px;
+  text-align: center;
 }
-.chakra-card__header{
+.chakra-card__header {
   padding: 1rem !important;
 }
-.chakra-card__body{
-  padding: .5rem !important;
+.chakra-card__body {
+  padding: 0.5rem !important;
   text-align: start;
 }
 
-.chakra-card__footer{
+.chakra-card__footer {
   text-align: center;
   gap: 7px;
   align-items: center;
-  color:  #3b71ca;
+  color: #3b71ca;
   font-weight: 600;
   padding-top: 0rem !important;
 }
 
-.view-box{
+.view-box {
   height: 24vh;
   display: flex;
   border-radius: 2rem;
@@ -300,7 +300,7 @@ text-align: center;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.add-box{
+.add-box {
   height: 24vh;
   display: flex;
   border-radius: 2rem;
@@ -309,29 +309,30 @@ text-align: center;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.add-box button{
-  padding: .6rem;
-  border-radius: .4rem;
+.add-box button {
+  padding: 0.6rem;
+  border-radius: 0.4rem;
   border: none;
   margin: 3rem;
-  background-color: #4CAF50;
-  color: white;
-  /* margin-top: .7rem; */}
-
-.view-box button{
-  padding: .6rem;
-  border-radius: .4rem;
-  border: none;
-  margin: 3rem;
-  background-color:#e3c56b;
+  background-color: #4caf50;
   color: white;
   /* margin-top: .7rem; */
 }
 
-.container{
+.view-box button {
+  padding: 0.6rem;
+  border-radius: 0.4rem;
+  border: none;
+  margin: 3rem;
+  background-color: #e3c56b;
+  color: white;
+  /* margin-top: .7rem; */
+}
+
+.container {
   overflow: scroll;
 }
-.containerd{
+.containerd {
   height: 64vh;
   width: 43vw;
   margin-top: 2rem !important;
@@ -340,7 +341,7 @@ text-align: center;
   padding: 2rem;
 }
 
-.view_code_card{
+.view_code_card {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
